--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,26 +41,6 @@
 
     </com.google.android.material.button.MaterialButton>
 
-   <com.google.android.material.textfield.TextInputLayout
-       android:id="@+id/usertypedata"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:paddingLeft="30dp"
-       app:prefixText="User Type"
-       app:layout_constraintTop_toBottomOf="@+id/skip"
-       android:layout_marginTop="20dp"
-       >
-       <Spinner
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:id="@+id/spinner"
-           android:layout_marginLeft="100dp"
-           app:layout_constraintTop_toTopOf="parent"
-           android:spinnerMode="dialog"
-           android:visibility="visible"/>
-
-   </com.google.android.material.textfield.TextInputLayout>
-
 
 
 
@@ -71,8 +51,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:weightSum="0.5"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/usertypedata"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/skip"
         app:startIconDrawable="@drawable/baseline_person_24"
         android:gravity="center"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
@@ -83,7 +63,7 @@
             android:layout_width="150dp"
             android:layout_margin="10dp"
             android:inputType="textCapSentences"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:hint="First Name"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -95,9 +75,9 @@
         android:layout_height="wrap_content"
         android:weightSum="0.5"
         android:layout_toRightOf="@+id/username"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/usertypedata"
+        app:layout_constraintTop_toBottomOf="@id/skip"
         android:gravity="center"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
         >
@@ -106,7 +86,7 @@
             android:id="@+id/Lastname"
             android:layout_margin="10dp"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:inputType="textCapSentences"
             android:hint="Last Name"
             android:maxLines="1" />
@@ -130,7 +110,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:maxLength="10"
             android:id="@+id/Phone1"
@@ -140,6 +120,27 @@
 
             />
     </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:id="@+id/usertype"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="10dp"
+        app:startIconDrawable="@drawable/baseline_person_24"
+        app:layout_constraintTop_toBottomOf="@id/Phone"
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
+
+        >
+        <AutoCompleteTextView
+            android:id="@+id/autoCompletes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="none"
+            android:text="User type">
+        </AutoCompleteTextView>
+    </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/Already_Account"
         android:layout_width="wrap_content"
@@ -149,11 +150,11 @@
         android:text="Already have an account"
         android:textColor="@color/black"
         android:background="@android:color/transparent"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:cornerRadius="30dp"
         android:layout_marginEnd="20dp"
         android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/Phone"
+        app:layout_constraintTop_toBottomOf="@id/usertype"
         >
 
     </com.google.android.material.button.MaterialButton>
